2011-10-25  Sergio Martin <sergio.martin@artica.es>

	* operation/incidents/incident_detail.php: Fixed creation
	of incident checking if exist assigned and creator users

	* operation/projects/project.php 
	operation/inventories/inventory.php
	godmode/updatemanager/load_updatemanager.php: Fixed
	error messages css class 

2011-10-24  Vanessa Gil <vgil@artica.es>

	* godmode/usuarios/import_from_csv.php: Added import of 
	users using a csv file.

2011-10-21  Vanessa Gil <vgil@artica.es>

	* godmode/grupos/configurar_grupo.php
	include/functions_db.php
	operation/incidents/incident_detail.php
	operation/projects/people_manager.php
	operation/projects/project_detail.php
	operation/user_report/monthly.php
	operation/user_report/report_annual.php
	operation/user_report/report_full.php
	operation/users/user_spare_workunit.php
	operation/users/user_task_assigment.php: improvements in
	user search.

2011-10-18  Vanessa Gil <vgil@artica.es>

	* godmode/grupos/configurar_grupo.php
	include/functions_db.php
	operation/incidents/incident_detail.php
	operation/projects/people_manager.php
	operation/projects/project_detail.php
	operation/user_report/monthly.php
	operation/user_report/report_annual.php
	operation/user_report/report_full.php
	operation/users/user_spare_workunit.php
	operation/users/user_task_assigment.php: Search and select user using ajax.
	
2011-10-14  Sancho Lerena <slerena@artica.es>

	* operation/todo/todo.php: Fixed layout.

2011-10-14  Vanessa Gil <vgil@artica.es>

	* include/js/jquery.autocomplete.js: Added file.

2011-10-13  Vanessa Gil <vgil@artica.es>

	* include/functions_html.php
	operation/todo/todo.php
	operation/incidents/incidents_detail.php
	operation/projects/people_manager.php
	include/styles/integria.css: Change users search.

2011-10-13  Sergio Martin <sergio.martin@artica.es>

	* integria_db.sql: Moved menu visability table from 
	enterpise code

2011-10-13  Sergio Martin <sergio.martin@artica.es>
